# shelfy

./: Dockerfile  pyproject.toml  readme.md
src/: detect_barcode.py  pdf_to_image.py
